Mobile Thesis and Footer, fixed Banner button alignment.

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -639,10 +639,6 @@ footer {
 
     }
 
-    .mobile_logo {
-
-    }
-
     .mobile_nav img {
         vertical-align: bottom;
         transition: filter 300ms ease-in-out;
@@ -700,7 +696,6 @@ footer {
         justify-content: center;
         max-width: 100%;
         margin: 32px 0px;
-        text-align: center;
     }
 
     /* Information */
@@ -820,12 +815,50 @@ footer {
     .button {
         margin: 4px;
         font-size: 1.4rem;
-        text-align: right;
-        justify-content: start;
-        padding-left: 16px;
+        text-align: center;
+        padding: 16px;
     }
 
     .button:hover {
         background-color: #f13c20;
         font-size: 1.45rem;
+    }
+
+    .thesis_side {
+        display: none;
+    }
+
+    .thesis_header h2 {
+        padding: 64px 0;
+        font-size: 2rem;
+    }
+
+    .thesis_main {
+        padding: 0 0 32px 0;
+        width: 100%;
+        height: auto;
+    }
+
+    .thesis_main video {
+        border-radius: 0;
+    }
+
+    .thesis_main h4, p {
+        display: none;
+    }
+
+    .footer_nav {
+        display: none;
+    }
+    
+    footer {
+        display: block;
+        padding: 16px;
+    }
+
+    .copyright p {
+        display: block;
+        padding: 0;
+        margin: 0;
+    }
 }
